--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -58,4 +58,10 @@ i:hover{
   background-color: rgb(106, 115, 137);
   min-height: 200px;
   margin-top:50px;
+  text-align:center;
+}
+
+.socialmedia{
+  vertical-align:center;
+  display:inline-block;
 }
