--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,9 +1,6 @@
 body{
   background-color: rgb(238, 238, 221);
-}
-
-h1,h2,h3 {
-    font-family: 'Kanit', sans-serif;
+  font-family: 'Kanit', sans-serif;
 }
 
 a,a:hover{
@@ -14,8 +11,16 @@ a,a:hover{
   color:rgb(204, 187, 153);
 }
 
+.social-inverse{
+  color:rgb(106, 115, 137);
+}
+
 .social:hover{
   color:rgb(238, 238, 221);
+}
+
+.social-inverse:hover{
+  color:rgb(204, 187, 153);
 }
 
 .thumb{
@@ -27,9 +32,13 @@ a,a:hover{
   background-color: rgb(106, 115, 137);
 }
 
+.showcase{
+  vertical-align:middle;
+  margin-bottom:50px;
+}
+
 .fa{
   font-size:50px;
-  color:rgb(204, 187, 153);
   margin:40px 30px 40px 30px;
 }
 
@@ -53,6 +62,12 @@ a,a:hover{
 .contact-form{
   background-color: rgb(233, 215, 177);
   border:1px ridge;
+}
+
+.modal-thumbnail{
+  display:inline-block;
+  width:618px;
+  background:lightgrey;
 }
 
 .resume{
